k8s/networkpolicy/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: backend-network-policy
  namespace: production
spec: 
  podSelector: 
    matchLabels: 
      app: backend
  policyTypes: 
    - Ingress
   
  ingress: 
    - from: 
        - podSelector:
            matchLabels: 
              app: frontend
      ports:
        - protocol: TCP
          port: 8000
